Remastered the scene

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ if (OPENMP_FOUND)
     set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
 endif()
 
-add_executable(rt src/main.cpp src/Vectors/vectors.cpp src/Vectors/vectors.h src/misc/misc.cpp src/misc/misc.h src/Objects/Object.cpp src/Objects/Object.h src/Objects/Sphere.cpp src/Objects/Sphere.h src src/Objects/MeshTriangle.cpp src/Objects/MeshTriangle.h src/Objects/Light.h src/Scene.cpp src/Scene.h src/Objects/Checkboard.cpp src/Objects/Checkboard.h src/Objects/Pyramid.cpp src/Objects/Pyramid.h)
+add_executable(rt src/main.cpp src/Vectors/vectors.cpp src/Vectors/vectors.h src/misc/misc.cpp src/misc/misc.h src/Objects/Object.cpp src/Objects/Object.h src/Objects/Sphere.cpp src/Objects/Sphere.h src src/Objects/MeshTriangle.cpp src/Objects/MeshTriangle.h src/Objects/Light.h src/Scene.cpp src/Scene.h src/Objects/Checkboard.cpp src/Objects/Checkboard.h src/misc/Image.h)
 
 target_link_libraries(rt ${ALL_LIBS} )
 
